--- a/style.css
+++ b/style.css
@@ -162,6 +162,12 @@ body {
     font-size: 14px;
     margin: 0;
   }
+  .fix {
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
 
   
   
